--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@opentelemetry/api": "^1.0.1",
     "duplexify": "^4.1.1",
     "glob": "^7.1.7",
-    "readable-stream": "^3.0.6",
-    "through2": "^4.0.2"
+    "readable-stream": "^3.0.6"
   },
   "devDependencies": {
     "barnard59-core": "^1.0.0",
